@@ -3089,17 +3089,17 @@ again:
     if (R_TrueValue != NULL && LOGICAL(R_TrueValue)[0] != TRUE)
     {
         LOGICAL(R_TrueValue)[0] = TRUE;
-        warning("internal TRUE value has been modified");
+        error("internal TRUE value has been modified");
     }
     if (R_FalseValue != NULL && LOGICAL(R_FalseValue)[0] != FALSE)
     {
         LOGICAL(R_FalseValue)[0] = FALSE;
-        warning("internal FALSE value has been modified");
+        error("internal FALSE value has been modified");
     }
     if (R_LogicalNAValue != NULL && LOGICAL(R_LogicalNAValue)[0] != NA_LOGICAL)
     {
         LOGICAL(R_LogicalNAValue)[0] = NA_LOGICAL;
-        warning("internal logical NA value has been modified");
+        error("internal logical NA value has been modified");
     }
 }
 
